﻿v3.4.0

- Improved Analyzer: PH_S019 - Now matches parameter types (only the first by default)


------------------

v3.3.0

- New Analyzer: PH_P013 - Discouraged EntityFramework Method
- New Analyzer: PH_S033 - Fire-and-Forget Tasks
- Renamed Analyzer: PH_P003 - Discouraged Thread Method (was Discouraged Method)
- Renamed Analyzer: PH_P005 - Blocking Wait on Async Method (was Missing Gate-Keeper)
- Renamed Analyzer: PH_B009 - Incomplete Monitor Synchronization on Multiple Fields (was Missing Monitor Synchronization)
- Renamed Analyzer: PH_B010 - Incomplete Monitor Synchronization on Single Field (was Missing Monitor Synchronization)
- Renamed Analyzer: PH_B004 - Single Pulse for Variable Wait Conditions (was Monitor.Wait is Enclosed By Parameter-Dependent While-Loop)
- Improved Analyzer: PH_B014 - Now reports await of as-expressions
- Improved Analyzer: PH_P005 - Now reports blocking accesses on ValueTasks
- Improved Analyzer: PH_S026 - Now reports blocking accesses on ValueTasks
- Improved Analyzer: PH_P007 - Now supports method exclusions (Task.Run by default)
- Improved Analyzer: PH_S004 - Moved Task related analysis to the new analyzer PH_S033


------------------

v3.2.1

- Updated vsixmanifest to work in Visual Studio 2022 Preview 1.


------------------

v3.2.0

- Improved Analyzer: PH_S019 - Now matches the return-type by default


------------------

v3.1.0

- New Analyzer: PH_B015 - Disposed Task Instead of Value
- Improved Analyzer: PH_S007 - Now respects activation frames
- Improved Analyzer: PH_P007 - Now reports default expressions where a token is available
- Improved Analyzer: PH_S019 - Now ignores EF Core's Add and AddRange of DbSet and DbContext by default
- Improved Analyzer: PH_S025 - Now supports lambda expressions and respects activation frames


------------------

v3.0.0

- Upgraded the .NET Compiler Platform (Roslyn) to version 3.3.1
- Raised the minimum required Visual Studio version to 16.3