@@ -7,3 +7,10 @@ Two or more fields are accessed inside a monitor lock. These fields are potentia
 ## Solution
 
 Enclose the block with a monitor lock.
+
+## Options
+
+```
+# Report readonly fields: ignore (default) / report
+dotnet_diagnostic.PH_B009.readonly = ignore
+```
